tdf#98806 RTF import: handle bookmarks in table text

Mapper().props() was called directly, so all bookmarks pointed to the
start of the A1 cell instead of the correct text range.

Change-Id: I40eeb85b61d2ae9138cd666d4a6a3c08eda47da3